# llm-jb-strategy-analysis

./: .env.example  .gitignore  PAIR_README.md  README.md  env.template  environment.yml  pyproject.toml  pytest.ini  requirements.txt  run_pair.py  setup.py  setup_instructions.md  test_pair.py
data/: forbidden_questions.csv  get_data_script
examples/: quick_start.py
pair/: __init__.py  analysis.py  common.py  config.py  conversers.py  experiment.py  judges.py  language_models.py  llm_client.py  loggers.py  main.py  models.py  pair_runner.py  system_prompts_fixed.py  target.py
pair.egg-info/: PKG-INFO  SOURCES.txt
pair/attacker/: attack.py  attacker_system_prompts.py
pair/judge/: judge.py  judge_sys_prompts.py  judge_system_prompts.py  judges.py
results/: intermediate_20250905_193857.json  intermediate_20250905_194009.json  intermediate_20250905_195610.json  intermediate_20250905_200551.json  intermediate_20250905_201004.json  metrics_20250905_193857.json  metrics_20250905_194009.json  metrics_20250905_195610.json  metrics_20250905_200551.json  metrics_20250905_201004.json  results_20250905_193857.json  results_20250905_194009.json  results_20250905_195610.json  results_20250905_200551.json  results_20250905_201004.json  summary_20250905_193857.csv  summary_20250905_194009.csv  summary_20250905_195610.csv  summary_20250905_200551.csv  summary_20250905_201004.csv
scripts/: get_data_script
src.egg-info/: SOURCES.txt
tests/: test_attack.py  test_classifier.py  test_env_check.py  test_judge.py  test_target_model.py
